--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-REACT_APP_GOOGLE_CLIENT_ID = '871372776882-q9har2n3l3i1ivb4o9ig2apqgb8p2vur.apps.googleusercontent.com'
+REACT_APP_GOOGLE_CLIENT_ID = ''
 REACT_APP_SERVER_URL='http://localhost:8000'
